--- a/dist.ini
+++ b/dist.ini
@@ -11,7 +11,7 @@ name=Sah-Schemas-Chrome
 perl=5.010001
 strict=0
 warnings=0
-Complete::Firefox=0
+Complete::Chrome=0
 
 [Prereqs / DevelopX_spec]
 -phase=develop
